--- a/tutorial/3-collections.html
+++ b/tutorial/3-collections.html
@@ -110,17 +110,8 @@ var CommentsView = Backbone.View.extend({
     /* Render each model in the collection as a list item (<li>).
      * Remember, we have the underscore functions: */
     this.$el.find('ul').append(this.collection.map(function(comment) {
-      return [
-      '<li>',
-        '<span class="votes">',
-          comment.get('votes'),
-        '<span>',
-        '<span class="comment">',
-          comment.get('message'),
-        '</span>',
-        '</br>',
-      '</li>'
-      ].join('');
+      var commentView = new CommentView({model: comment})
+      return '<li>' + commentView.render().html() + '</li>';
     }));
 
     return this.$el;
